--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,11 @@
     <div>
         <a th:href="@{/signup}">inscription</a>
     </div>
+    <section>
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" value="Sign Out"/>
+        </form>
+    </section>
 </h1>
 </body>
 </html>
