creation user dans spring security

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
             <input type="submit" value="Sign Out"/>
         </form>
     </section>
+    <a th:href="@{/login}">login</a>
 </h1>
 </body>
 </html>
